tests/spec/fail/keyword_only_marker_without_params.aja
fuc bad(a: int, *) -> int:
    return a
